# prescience-client

./: .gitignore  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  LICENSE  MAINTAINERS  Makefile  README.md  index.ipynb  prescience  prescience_client.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
docs/: problem_types.md  scoring-metric.md
docs/draw-io/: README.md  prescience_object_model.xml
docs/jupyterlab/: auto-ml_iris.ipynb  auto-ml_ts_horizon_template.ipynb
docs/terminalizer/: optimization.yml  parse-csv.yml  preprocess.yml  prescience-serving-payload.yml  show-datasets-schema.yml  show-datasets.yml  show-evaluation-result.yml  show-schema.yml  show-sources.yml
misc/: pylintrc
notebooks/: auto-ml_iris.ipynb  auto-ml_ts_horizon_template.ipynb
prescience_client/: __init__.py
prescience_client/bean/: algorithm_configuration.py  config.py  dataset.py  evaluation_result.py  hyperparameter.py  metadata_page_result.py  model.py  model_metric.py  page_result.py  project.py  schema.py  source.py  task.py  test_evaluation.py
prescience_client/client/: prescience_client.py
prescience_client/commands/: __init__.py  command.py  config_command.py  delete_command.py  generate_command.py  get_command.py  plot_command.py  predict_command.py  root_command.py  start_command.py
prescience_client/config/: constants.py  prescience_config.py
tests/: test_monad.py  test_prescience_client.py  test_prescience_config.py  test_utils.py  test_w10_ts_input.py  utils.py
tests/resources/: test.csv  (+1 more)
tests_integration/: test_basic_scenario.py
(+70 files in other folders)
