[metadata]
name = prescience-client
description = "OVH Prescience python client"
long_description = file: README.md
version = 0.0.1
author = Maël LE GAL
author_email = mael.le-gal@corp.ovh.com
url = https://prescience.ai.ovh.net
license = BSD 3-Clause License
license_file = LICENSE
keywords = ovh, sdk, machine-learning
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
packages = find:
setup_requires =
    setuptools>=30.3.0
include_package_data = True
install_requires =
    pycurl==7.43.0.2
    websocket-client==0.54.0
    progress==1.4
    PTable==0.9.2
    termcolor==1.1.0
    asciitree==0.3.3
    PyYAML==3.13
    pytest==4.1.1
    pylint==2.2.2
    termgraph==0.2.0
    numpy==1.16.1
    pandas==0.24.1
    pyarrow==0.12.0
    matplotlib==3.0.2

scripts =
    prescience

[options.packages.find]
exclude =
    tests
    tests_integration
    docs
